// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImportChannelForm renders component 1`] = `
<Modal
  addBorder={false}
  alignCloseLeft={false}
  canGoBack={false}
  contentWidth={600}
  handleClose={[MockFunction]}
  isBold={false}
  isCloseDisabled={false}
  open={true}
  title="Import channel"
>
  <Connect(ImportChannelForm) />
  <Connect(Component) />
</Modal>
`;

exports[`ImportChannelForm renders component closed 1`] = `
<Modal
  addBorder={false}
  alignCloseLeft={false}
  canGoBack={false}
  contentWidth={600}
  handleClose={[MockFunction]}
  isBold={false}
  isCloseDisabled={false}
  open={false}
  title="Import channel"
>
  <Connect(ImportChannelForm) />
  <Connect(Component) />
</Modal>
`;
